Contact form visual bug fix on small screens

--- a/stil.css
+++ b/stil.css
@@ -117,8 +117,12 @@ body
 .bg
 {
 	background-color:#81BEF7;
+}
+
+.con
+{
 	width: 100%;
-	height: 100vh;
+	margin-top: 50px;
 	display: flex;
 	align-items: center;
 	align-content: center;
